--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -13,10 +13,13 @@
 @import 'functions';
 @import 'mixins';
 
+@import 'components/utitlties';
 @import 'components/picture';
 @import 'components/featured-media';
 @import 'components/search';
 @import 'components/in-page-nav';
+
+@import 'components/nhsuk-overrides/summary-list';
 
 ///////////////////////////////////////////
 // DLS css
