--- a/app/views/layouts/layout-registration.html
+++ b/app/views/layouts/layout-registration.html
@@ -1,5 +1,5 @@
 
-{%- from "data/register-params.njk" import allRoles, allProgrammes, months, uploadData, uploadDataFaulty %}
+{%- from "data/register/register-params.njk" import allRoles, allProgrammes, months, uploadData, uploadDataFaulty %}
 {% extends "./layout.html" %}
 
 {% block main %}
