--- a/app/views/prototypes/register/multiple/upload.html
+++ b/app/views/prototypes/register/multiple/upload.html
@@ -195,7 +195,7 @@
 
               <div class="nhsuk-grid-column-two-thirds">
                 {# <div class="nhsuk-u-reading-width"> #}
-                  <h2 class="nhsuk-heading-s">12 of 55 users had erros</h2>
+                  <h2 class="nhsuk-heading-s">12 of 55 users have erros</h2>
 
                   <div class="proto-summary-list-group">
                     {% for user in uploadUsers %}
