--- a/app/assets/sass/components/nhsuk-overrides/_summary-list.scss
+++ b/app/assets/sass/components/nhsuk-overrides/_summary-list.scss
@@ -6,20 +6,19 @@
 //   }
 // }
 
+// border: $global-border;
+// border-radius: $global-radius;
+
 .nhsuk-summary-list.proto-summary-list {
-  // border: $global-border;
-  // border-radius: $global-radius;
 
   .nhsuk-summary-list__row {
     display: flex;
   }
   .nhsuk-summary-list__key {
     width: 300px;
-    // padding-left: 15px;
   }
   .nhsuk-summary-list__value {
     flex: 1;
-    // padding-right: 15px;
   }
 
   .nhsuk-summary-list__key,
@@ -29,6 +28,44 @@
     &.proto-error{
       margin-top: nhsuk-spacing(1);
       margin-bottom: nhsuk-spacing(1);
+    }
+  }
+}
+
+.nhsuk-summary-list.proto-summary-list--multiline-description {
+
+  .nhsuk-summary-list__row {
+    margin-bottom: 16px;
+    padding-bottom: 16px;
+    border-bottom: $global-border;
+
+    @include breakpoint(6) {
+      display: grid;
+      grid-template-columns: 250px auto 100px;
+    }
+  }
+
+  .nhsuk-summary-list__key {
+    @include breakpoint(6){
+      grid-column-start: 1;
+      width: 250px;
+    }
+  }
+
+  .nhsuk-summary-list__value {
+    @include breakpoint(6){
+      grid-column-start: 2;
+      width: 100%;
+    }
+  }
+
+  .nhsuk-summary-list__actions {
+    margin-bottom: 0;
+
+    @include breakpoint(6){
+      grid-row-start: 1;
+      grid-column-start: 3;
+      width: 100px;
     }
   }
 }
