--- a/app/views/prototypes/register/multiple/summary.html
+++ b/app/views/prototypes/register/multiple/summary.html
@@ -1,3 +1,4 @@
+{%- from "data/register/upload.njk" import uploadUsers %}
 {% extends 'layouts/layout-registration.html' %}
 
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
@@ -16,7 +17,7 @@
 
 {% block content %}
   <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-three-quarters">
+    <div class="nhsuk-grid-column-full">
 
       <h1>
         Summary
@@ -25,15 +26,55 @@
       <form action="/prototypes/register/multiple/confirmation" method="post" class="form">
 
         <div class="nhsuk-u-reading-width">
-          <p class="nhsuk-body-l">
-            <b>{{ uploadData | length }}</b> new delegates to be created
-          </p>
           <p>
-            Review the information below to ensure everything looks right. If anything looks incorrect, check your spreadsheet then <b><a href='/prototypes/register/multiple'>go back</a></b> and reupload.
+            You can review and edit details from this page or, check your spreadsheet and <a href='/prototypes/register/multiple'>re-upload it</a>.
           </p>
+          <ul>
+            <li>The default role for a user is a learner</li>
+            <li>You can change or update the information on this page using the link below.</li>
+            <li>Assigning a self assessment or role applies to all user during registration</li>
+          </ul>
+
+          <!-- <h2>Review</h2> -->
         </div>
 
-        <div class="upload-summary__table">
+        <hr class="nhsuk-u-margin-bottom-3 nhsuk-u-margin-top-6">
+
+        <dl class="nhsuk-summary-list nhsuk-summary-list--no-border proto-summary-list--multiline-description nhsuk-">
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">Users</dt>
+            <dd class="nhsuk-summary-list__value">{{ uploadUsers | length }} delegates uploaded</dd>
+            <dd class="nhsuk-summary-list__value">6 users already exist in the system</dd>
+            <dd class="nhsuk-summary-list__value">49 new user to be added</dd>
+            <dd class="nhsuk-summary-list__actions">
+              <a href="/prototypes/register/multiple/enrolment">Review<span class="nhsuk-u-visually-hidden"> users</span></a>
+            </dd>
+          </div>
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">Self assessment enrolment</dt>
+            <dd class="nhsuk-summary-list__value">These delegates will not be enroled onto a self assessment</dd>
+            <dd class="nhsuk-summary-list__actions">
+              <a href="/prototypes/register/multiple/enrolment">Change<span class="nhsuk-u-visually-hidden"> enrolment</span></a>
+            </dd>
+          </div>
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">Role</dt>
+            <dd class="nhsuk-summary-list__value">Learner</dd>
+            <dd class="nhsuk-summary-list__actions">
+              <a href="/prototypes/register/multiple/enrolment">Change<span class="nhsuk-u-visually-hidden"> role</span></a>
+            </dd>
+          </div>
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">Welcome email</dt>
+            <dd class="nhsuk-summary-list__value">Welcome email will be sent on: 06 / 11 / 2023</dd>
+            <dd class="nhsuk-summary-list__actions">
+              <a href="/prototypes/register/multiple/enrolment">Change<span class="nhsuk-u-visually-hidden"> enrolment</span></a>
+            </dd>
+          </div>
+        </dl>
+
+
+        <!-- <div class="upload-summary__table">
           <table>
             <thead>
               <th>First name</th>
@@ -58,8 +99,8 @@
               {% endfor %}
             </tbody>
           </table>
-        </div>
-
+        </div> -->
+{#
         <h2 class="nhsuk-heading-m">Self assessment enrolment</h2>
 
         <dl class="nhsuk-summary-list">
@@ -70,6 +111,16 @@
             </p>
             {% for programme in data['enrolment'] %}
               <div class="nhsuk-summary-list__row">
+
+                <dt class="nhsuk-summary-list__key">
+                  {{ allProgrammes[programme].title }}
+                </dd>
+
+
+                <dd class="nhsuk-summary-list__value">
+                  {{ allProgrammes[programme].title }}
+                </dd>
+
 
                 <dd class="nhsuk-summary-list__value">
                   {{ allProgrammes[programme].title }}
@@ -190,7 +241,7 @@
 
           </div>
 
-        </dl>
+        </dl> #}
 
         {{ button({
           "text": "Confirm new registration",
