update upload page title

--- a/app/views/prototypes/register/multiple/upload.html
+++ b/app/views/prototypes/register/multiple/upload.html
@@ -33,7 +33,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
 
-      <h1>Upload summary</h1>
+      <h1>Upload user details</h1>
 
       <div class="nhsuk-u-reading-width">
         <p class="nhsuk-body-l">
