Create certificates design with print styling

--- a/app/assets/sass/_variables.scss
+++ b/app/assets/sass/_variables.scss
@@ -43,3 +43,4 @@ $aspect-ratio-3-to-1: math.div(100%, 3) * 1; // 33% of width
 $aspect-ratio-4-to-1: math.div(100%, 4) * 1; // 25% of width
 $aspect-ratio-5-to-1: math.div(100%, 5) * 1; // 20%
 $aspect-ratio-6-to-1: math.div(100%, 6) * 1; // 16.66%
+$aspect-ratio-A4: 100% * 1.4142; // 141.42%
