--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -18,6 +18,7 @@
 @import 'components/featured-media';
 @import 'components/search';
 @import 'components/in-page-nav';
+@import 'components/certificate';
 
 @import 'components/nhsuk-overrides/summary-list';
 
