--- a/app/views/index.html
+++ b/app/views/index.html
@@ -79,6 +79,15 @@
               "description": ""
             }) }}
           </li>
+          <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+            {{ card({
+              "href": "/prototypes/certificates",
+              "clickable": "true",
+              "heading": "Certificate",
+              "headingClasses": "nhsuk-heading-s",
+              "description": ""
+            }) }}
+          </li>
         </ul>
 
         <hr class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-6">
