--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -19,8 +19,10 @@
 @import 'components/search';
 @import 'components/in-page-nav';
 @import 'components/certificate';
+@import 'components/learning-log';
 
 @import 'components/nhsuk-overrides/summary-list';
+@import 'components/nhsuk-overrides/tag';
 
 ///////////////////////////////////////////
 // DLS css
